--- a/_quarto.yml
+++ b/_quarto.yml
@@ -3,18 +3,24 @@ project:
   output-dir: docs
 
 website:
-  title: "anna-tackabery.github.io"
+  title: "Anna Tackabery"
   navbar:
+    background: primary
     left:
       - href: index.qmd
         text: Home
       - about.qmd
+      - education.qmd
 
+# supplying a light ("minty") and dark ("slate") theme to toggle between
 format:
   html:
-    theme: cosmo
+    theme: 
+      light: yeti
+      dark: darkly
     css: styles.css
     toc: true
+    page-layout: full
 
 editor: visual
 
